The app launches successfully.
add:
* layouts
* fragments

update:
* manifest

--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -1,9 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_cesium_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.teamagam.gimelgimel.app.view.fragments.CesiumFragment">
+    tools:context="com.teamagam.gimelgimel.app.view.fragments.MessageFragment"
+    android:id="@+id/fragment_message_view">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
