--- a/app/src/main/res/layout/fragment_friend_detail.xml
+++ b/app/src/main/res/layout/fragment_friend_detail.xml
@@ -1,9 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_cesium_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.teamagam.gimelgimel.app.view.fragments.CesiumFragment">
+    tools:context=".app.view.fragments.FriendDetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
