--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -5,7 +5,9 @@
     android:id="@+id/fragment_friends_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="4dp"
-    android:paddingRight="4dp"
-    tools:context="com.teamagam.gimelgimel.app.view.fragments.FriendsFragment"
-    />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.teamagam.gimelgimel.app.view.fragments.FriendsFragment"/>
+
