Added both Java and Javascript code for vector layers and entities management.
Vector layers support for markers completed.
supports CRUD operations over entities.
an entity which is associated with a layer will automatically update view on data changes.

CesiumMapView keeps synchronization between vectors data and displayed entities on Cesium using CesiumVectorLayersBridge which is responsible for javascript commands executions.

CesiumFragment renamed to ViewerFragment
GGViewer interface added for modularity

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/fragment_cesium_view"
-        android:name="com.teamagam.gimelgimel.app.view.fragments.CesiumFragment"
+        android:name="com.teamagam.gimelgimel.app.view.fragments.ViewerFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
