--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -1,20 +1,27 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_cesium_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.teamagam.gimelgimel.app.view.fragments.CesiumFragment">
+<FrameLayout android:id="@+id/fragment_cesium_view"
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context=".app.view.fragments.ViewerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:text="@string/cesium_blank_fragment" />-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:text="@string/cesium_blank_fragment" />-->
 
     <com.teamagam.gimelgimel.app.view.viewer.CesiumMapView
-        android:id="@+id/cesium_map_view"
+        android:id="@+id/gg_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
         />
 
 
