--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -11,7 +11,7 @@
     <!--android:layout_height="match_parent"-->
     <!--android:text="@string/cesium_blank_fragment" />-->
 
-    <com.teamagam.gimelgimel.app.view.viewer.CesiumMapView
+    <com.teamagam.gimelgimel.app.view.viewer.cesium.CesiumMapView
         android:id="@+id/gg_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
