--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,44 +1,29 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:divider="?android:attr/dividerHorizontal"
-    android:orientation="horizontal"
-    tools:context="com.example.android.sunshine.app.MainActivity">
-
-    <!--
-    This layout have a main framer (cesium map) & left drawer menu
-    -->
-    <android.support.v4.widget.DrawerLayout
+    android:layout_height="match_parent">
+    <!-- The main content view -->
+    <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!-- The main content view -->
-        <fragment
-            android:id="@+id/fragment_cesium_view"
-            android:name="com.teamagam.gimelgimel.app.view.fragments.CesiumFragment"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            />
-        <!-- The navigation drawer -->
-        <ListView android:id="@+id/left_drawer"
-            android:layout_width="240dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:background="#111"/>
-    </android.support.v4.widget.DrawerLayout>
-    <fragment
-        android:id="@+id/fragment_friends_recycler_view"
-        android:name="com.teamagam.gimelgimel.app.view.fragments.FriendsFragment"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"/>
-        <!--tools:layout="@android:layout/list_content"-->
+        tools:context="com..project.MainActivity"
+        tools:ignore="MergeRootFrame"
+        />
+    <!-- The navigation drawer -->
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#111"/>
+</android.support.v4.widget.DrawerLayout>
 
-</LinearLayout>
+
+
+
