--- a/app/src/main/res/menu-sw600dp/main.xml
+++ b/app/src/main/res/menu-sw600dp/main.xml
@@ -3,7 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools">
     <item
         android:orderInCategory="100"
+        android:id="@+id/action_location"
+        android:title="@string/menu_location_title">
+    </item>
+    <item
+        android:orderInCategory="100"
         android:id="@+id/action_settings"
         android:title="@string/menu_setting_title">
     </item>
+
+    <item
+        android:orderInCategory="100"
+        android:id="@+id/action_friends"
+        android:title="@string/menu_setting_friends">
+    </item>
 </menu>
+
+
