--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/selectable_item_background"
-    android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/selectable_item_background"
+              android:orientation="horizontal"
+              android:paddingBottom="8dp"
+              android:paddingTop="8dp">
 
     <ImageView
         android:id="@+id/drawer_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp" />
+        android:paddingLeft="8dp"
+        />
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
         android:id="@+id/drawer_text"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="top"
@@ -23,5 +25,6 @@
         android:paddingRight="8dp"
         android:paddingTop="0dp"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:textColor="#303030" />
+        android:textColor="@color/black"
+        />
 </LinearLayout>
