--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -19,12 +19,12 @@
         android:layout_weight="4"
         />
 
-    <fragment
-        android:id="@+id/fragment_friends_recycler_view"
-        android:name="com.teamagam.gimelgimel.app.view.fragments.FriendsFragment"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"/>
-        <!--tools:layout="@android:layout/list_content"-->
+    <!--<fragment-->
+        <!--android:id="@+id/fragment_friends_recycler_view"-->
+        <!--android:name="com.teamagam.gimelgimel.app.view.fragments.FriendsFragment"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="2"/>-->
+        <!--&lt;!&ndash;tools:layout="@android:layout/list_content"&ndash;&gt;-->
 
 </LinearLayout>
