--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -11,76 +11,68 @@
         android:layout_height="match_parent"
         />
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
+        android:columnCount="4"
         >
 
         <Button
             android:id="@+id/fab_custom_layer_creation_test"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="add"
             />
 
         <Button
             android:id="@+id/fab_remove_entity_test"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="delete"
             />
 
         <Button
             android:id="@+id/fab_custom_layer_update_test"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="update"
             />
 
         <Button
             android:id="@+id/fab_kml_layer_test"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="kml"
             />
 
         <Button
             android:id="@+id/fab_remove_layers_test"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="clear"
             />
-    </LinearLayout>
 
         <Button
             android:id="@+id/goto_button"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="GoTo"
             />
 
         <Button
             android:id="@+id/center_display_button"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Center"
             />
 
         <Button
             android:id="@+id/touched_display_button"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="touched"
             />
-    </LinearLayout>
+    </GridLayout>
 </FrameLayout>
