--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    xmlns:fab="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- The main content view -->
     <FrameLayout
         android:id="@+id/container"
@@ -13,7 +15,28 @@
         android:layout_height="match_parent"
         tools:context="com..project.MainActivity"
         tools:ignore="MergeRootFrame"
-        />
+        >
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/message_fab"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/ic_message"
+            app:backgroundTint="@color/pink"
+            app:borderWidth="10dp"
+            app:elevation="6dp"
+            fab:button_colorPressed="@color/orange"
+            fab:button_colorRipple="@color/blue"
+            fab:image_size="24dp"
+            fab:shadowResponsiveEffect_enabled="true"
+            fab:shadow_color="@color/orange"
+            fab:shadow_radius="2.0dp"
+            fab:shadow_xOffset="0.5dp"
+            fab:shadow_yOffset="2.0dp"
+            />
+        </FrameLayout>
     <!-- The navigation drawer -->
     <ListView
         android:id="@+id/left_drawer"
