--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <!-- fabs -->
+    <dimen name="fab_big">56dp</dimen>
+    <dimen name="fab_normal">76dp</dimen>
+
 </resources>
