--- a/app/src/main/res/values/prefs.xml
+++ b/app/src/main/res/values/prefs.xml
@@ -6,4 +6,8 @@
     <string name="pref_startup_longitude">35.2</string>
     <string name="pref_startup_height">200000</string>
 
+    <!--<string name="GG_api_base_url">http://localhost:3000/</string>-->
+    <string name="GG_api_base_url">http://ggmessaging.herokuapp.com/</string>
+
+
 </resources>
