1.New functionality! GG messaging polling service: polls GGMessaging service (on heroku atm) for new messages. Uses a background thread to poll (using an Intent Service).
2.RestAPI
A singleton facade for all retrofit created service in the system.
ATM only hold GGMessagingAPI.

3.GGMessagingAPI
renamed class.
Added simple GET request, and changed parameter of GET request from a minimal date. (from Date to long)

4.XMLs
Extracted configuration string from prefs to config.
Added a preference key in pref.xml that in use by GGMessagePollingService.

 5.MessagePubSub
 A mechanism created to replace DB operation for message entities.
 Its a temporary fix for service-activities communication instead of the standard DB.

 6.GGApplication
 onCreate starts a periodical run of GGMessagePollingService.

 7.MainActivity
 Registers a subscriber for incoming new messages to be displayed with a Toast.

 8.Refactored
 Moved model/rest dir to network.
 GGMessagingApi to GGMessagingAPI

--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Messaging service configuration -->
+    <integer name="messaging_service_polling_frequency_ms">5000</integer>
+    <string name="GG_api_base_url">http://ggmessaging.herokuapp.com/</string>
+    <!--<string name="GG_api_base_url">http://localhost:3000/</string>-->
 
 </resources>
