--- a/app/src/main/res/layout/fragment_cesium.xml
+++ b/app/src/main/res/layout/fragment_cesium.xml
@@ -1,9 +1,12 @@
-<FrameLayout android:id="@+id/fragment_cesium_view"
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".app.view.fragments.ViewerFragment">
+<FrameLayout
+    android:id="@+id/fragment_cesium_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".app.view.fragments.ViewerFragment">
 
     <com.teamagam.gimelgimel.app.view.viewer.cesium.CesiumMapView
         android:id="@+id/gg_map_view"
@@ -15,8 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:orientation="horizontal"
         android:columnCount="4"
+        android:orientation="horizontal"
         >
 
         <Button
@@ -75,4 +78,20 @@
             android:text="touched"
             />
     </GridLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/message_fab"
+        android:layout_width="76dp"
+        android:layout_height="76dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:src="@drawable/ic_message"
+        app:backgroundTint="@color/pink"
+        app:borderWidth="0dp"
+        app:elevation="12dp"
+        fab:button_colorPressed="@color/orange"
+        fab:button_colorRipple="@color/blue"
+        fab:image_size="24dp"/>
+
 </FrameLayout>
