--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
-<android.widget.DrawerLayout
+<!--todo: clean v4 from code-->
+<android.support.v4.widget.DrawerLayout
     android:id="@+id/main_activity_drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -36,7 +37,7 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"/>
-</android.widget.DrawerLayout>
+</android.support.v4.widget.DrawerLayout>
 
 
 
