--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -2,6 +2,11 @@
 <resources>
     <!-- Messaging service configuration -->
     <integer name="messaging_service_polling_frequency_ms">5000</integer>
+
+    <!--location fetcher configuration-->
+    <integer name="location_min_update_frequency_ms">0</integer>
+    <string name="location_threshold_update_distance_m">0</string>
+
     <string name="GG_api_base_url">http://ggmessaging.herokuapp.com/</string>
     <!--<string name="GG_api_base_url">http://localhost:3000/</string>-->
 
