--- a/app/src/main/res/values/prefs.xml
+++ b/app/src/main/res/values/prefs.xml
@@ -4,6 +4,6 @@
 
     <string name="pref_latest_received_message_date_in_ms" translatable="false">pref_date_ms</string>
 
-    <string name="pref_should_poll" translatable="false">pref_should_poll</string>
+    <string name="pref_should_long_poll_messages" translatable="false">pref_should_poll</string>
 
 </resources>
