--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -1,13 +1,15 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".app.view.fragments.dialogs.ImageDialogFragment"
-    android:columnCount="2"
+    android:columnCount="5"
     android:rowCount="5"
+    android:columnOrderPreserved="false"
     android:useDefaultMargins="true"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:alignmentMode="alignBounds">
 
     <!-- Image -->
     <com.facebook.drawee.view.SimpleDraweeView
@@ -24,51 +26,37 @@
     <!-- Image Date -->
     <TextView
         android:id="@+id/dialog_image_date"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_column="0"
         android:layout_row="1"
         android:layout_columnSpan="2"/>
 
     <!-- Latitude Value -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:text="@string/dialog_go_to_latitude_text"
         android:layout_column="0"
         android:layout_row="2" />
     <TextView
         android:id="@+id/dialog_image_coord_lat"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_column="1"
         android:layout_row="2" />
 
     <!-- Longitude Value -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:text="@string/dialog_go_to_longitude_text"
         android:layout_column="0"
         android:layout_row="3" />
     <TextView
         android:id="@+id/dialog_image_coord_lon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_column="1"
         android:layout_row="3" />
 
     <!-- Source Type -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:text="@string/dialog_image_source_type"
         android:layout_column="0"
         android:layout_row="4" />
     <TextView
         android:id="@+id/dialog_image_source_type"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_column="1"
         android:layout_row="4" />
 
