--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,21 @@
     >
     <!-- The main content view -->
     <RelativeLayout
+        android:id="@+id/main_activity_main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true">
+
+        <TextView
+            android:id="@+id/no_gps_signal_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
+            android:background="@color/red"
+            android:text="@string/no_gps_signal"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            />
 
         <FrameLayout
             android:id="@+id/container"
