--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -5,11 +5,12 @@
 
     <!--location fetcher configuration-->
     <integer name="location_min_update_frequency_ms">1000</integer>
-    <string name="location_threshold_update_distance_m">3</string>
+    <integer name="location_threshold_update_distance_m">3</integer>
 
     <string name="GG_api_base_url">http://ggmessaging.herokuapp.com/</string>
     <!--<string name="GG_api_base_url">http://localhost:3000/</string>-->
 
     <integer name="locate_me_button_altitude">500</integer>
+    <integer name="location_fetcher_minimum_sample_accuracy_threshold_meters">50</integer>
 
 </resources>
