--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -10,4 +10,11 @@
     <string name="GG_api_base_url">http://ggmessaging.herokuapp.com/</string>
     <!--<string name="GG_api_base_url">http://localhost:3000/</string>-->
 
+    <!-- GGMapView initial bounding box values. written as string since there are not floating point resources available-->
+    <string name="map_view_initial_bounding_box_east">36.0</string>
+    <string name="map_view_initial_bounding_box_west">34.0</string>
+    <string name="map_view_initial_bounding_box_north">34.0</string>
+    <string name="map_view_initial_bounding_box_south">29.0</string>
+
+
 </resources>
