Finished no network message
Added new classes:
  * ConnectivtyStatusReceiver - Which will be listen to intent when something happens to the network
  * NetworkChangeReceiver - Tracks the network interface changes, then check if the network can reach our server

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,18 @@
             android:textColor="@color/white"
             />
 
+        <TextView
+            android:id="@+id/no_network_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
+            android:background="@color/red"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_below="@id/no_gps_signal_text_view"
+            android:text="@string/no_network"
+            />
+
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
