--- a/app/src/main/res/xml/pref_gps.xml
+++ b/app/src/main/res/xml/pref_gps.xml
@@ -4,14 +4,14 @@
          when checked/unchecked. -->
     <SwitchPreference
         android:defaultValue="true"
-        android:key="notifications_gps"
+        android:key="@string/notifications_gps_key"
         android:title="@string/pref_title_gps_availability" />
 
     <ListPreference
         android:defaultValue="180"
         android:entries="@array/pref_sync_gps_distance"
         android:entryValues="@array/pref_sync_gps_distance_values"
-        android:key="gps_distance"
+        android:key="@string/gps_distance_key"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
         android:title="@string/pref_title_gps_distance" />
